--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.2.1",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/material": "^14.2.1",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@ngneat/until-destroy": "^9.2.2",
+    "angular-pipes": "^10.0.0",
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1",
+    "loader": "^2.1.1",
     "rxjs": "~7.5.0",
+    "toaster": "^0.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
